Modifica para java 18